# apis-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  buf.gen.yaml  buf.yaml
.github/workflows/: generate.yml
src/apis/htpp/capture/service/v1/: capture.grpc.pb.cc  capture.grpc.pb.h  capture.pb.cc  capture.pb.h
src/apis/htpp/machine/robot/v1/: robot.grpc.pb.cc  robot.grpc.pb.h  robot.pb.cc  robot.pb.h
src/apis/htpp/machine/service/v1/: machine.grpc.pb.cc  machine.grpc.pb.h  machine.pb.cc  machine.pb.h
src/apis/htpp/user/service/v1/: user.grpc.pb.cc  user.grpc.pb.h  user.pb.cc  user.pb.h
